--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="gallery-container">
-        <h2>Gallery</h2>
+        <h2>Cats Gallery</h2><br><br>
         <ul class="gallery-list">
             <li>
                 <a data-fancybox="gallery" href="https://images.unsplash.com/photo-1602884954603-6080b9d4c378?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80">
